# ChangeLog for media-fonts/dejavu
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.57 2007/03/19 03:32:29 kloeri Exp $

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove flameeyes from metadata.xml due to retirement.

*dejavu-2.15 (18 Feb 2007)

  18 Feb 2007; Robin H. Johnson <robbat2@gentoo.org> +dejavu-2.15.ebuild:
  Version bump for flameeyes.

  30 Jan 2007; Steve Dibb <beandog@gentoo.org> dejavu-2.13.ebuild:
  amd64 stable, bug 163108

  23 Jan 2007; nixnut <nixnut@gentoo.org> dejavu-2.13.ebuild:
  Stable on ppc wrt bug 163108

  22 Jan 2007; Markus Rothe <corsair@gentoo.org> dejavu-2.13.ebuild:
  Stable on ppc64; bug #163108

  22 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> dejavu-2.13.ebuild:
  Stable on sparc wrt #163108

  21 Jan 2007; Andrej Kacian <ticho@gentoo.org> dejavu-2.13.ebuild:
  Stable on x86, bug #163108.

*dejavu-2.14 (21 Jan 2007)

  21 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> -dejavu-2.7.ebuild,
  -dejavu-2.12.ebuild, +dejavu-2.14.ebuild:
  Version bump, old versions cleanup.

*dejavu-2.13 (17 Dec 2006)

  17 Dec 2006; Diego Pettenò <flameeyes@gentoo.org> +dejavu-2.13.ebuild:
  Version bump.

  16 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> dejavu-2.11.ebuild:
  Stable on Alpha, bug 155673.

  30 Nov 2006; Markus Rothe <corsair@gentoo.org> dejavu-2.7.ebuild,
  dejavu-2.11.ebuild, dejavu-2.12.ebuild:
  Added ~ppc64

  26 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> dejavu-2.12.ebuild:
  Restrict binchecks and strip, cuts about 20 seconds on the merge, as the
  package installs only fonts data (and docs).

  23 Nov 2006; <blubb@gentoo.org> dejavu-2.11.ebuild:
  stable on amd64

  20 Nov 2006; nixnut <nixnut@gentoo.org> dejavu-2.11.ebuild:
  Stable on ppc wrt bug 155673

  20 Nov 2006; Jason Wever <weeve@gentoo.org> dejavu-2.11.ebuild:
  Stable on SPARC wrt bug #155673.
