@@ -1,16 +1,24 @@
 DIST dejavu-ttf-2.15.tar.bz2 2909638 RMD160 b4832fcdcc7c13d6218ba91ece56b00c59202f0a SHA1 2133fbae14e51fc364972c4a4ee2fdc3ccee4072 SHA256 22b1f489afef6849919220591ffc51615b9cddbea61b66b43791fdeebb4dbe09
-EBUILD dejavu-2.15.ebuild 686 RMD160 da337dbd824ef56f60dbb3c608d1a990d3a06fb5 SHA1 327030b7edb1e9a5695b0ae04c1078839f173aae SHA256 378d54dadf67cb062e7f84fc17ddf50d6f962748a8732803e6a2f23757a3cc3c
-MD5 c4852e3eac98323bc612f8e479b4c85c dejavu-2.15.ebuild 686
-RMD160 da337dbd824ef56f60dbb3c608d1a990d3a06fb5 dejavu-2.15.ebuild 686
-SHA256 378d54dadf67cb062e7f84fc17ddf50d6f962748a8732803e6a2f23757a3cc3c dejavu-2.15.ebuild 686
-MISC ChangeLog 7416 RMD160 9ee11a1e4654fe3b3e90815021df38406b070adf SHA1 4756b47fd88046a7f74912cf70c25377c384cf43 SHA256 4283fc0ee46a1d0f7b24a82830214a464103328e6ffd061743a63bd9a9cc52ac
-MD5 efba3194bdf61da9454680780b5badcf ChangeLog 7416
-RMD160 9ee11a1e4654fe3b3e90815021df38406b070adf ChangeLog 7416
-SHA256 4283fc0ee46a1d0f7b24a82830214a464103328e6ffd061743a63bd9a9cc52ac ChangeLog 7416
-MISC metadata.xml 158 RMD160 e563fdca0707ee5927deab77f2e5ef79816384ca SHA1 8e4ca6d183e52cdbea8cfba08b7a7910e648fc84 SHA256 9a8722fb0b5a1992b3942e85f23df4e08f10cabc2d783ca887479abe115b3ea8
-MD5 295674d4bed87f5a7c2796e032ed561e metadata.xml 158
-RMD160 e563fdca0707ee5927deab77f2e5ef79816384ca metadata.xml 158
-SHA256 9a8722fb0b5a1992b3942e85f23df4e08f10cabc2d783ca887479abe115b3ea8 metadata.xml 158
+DIST dejavu-ttf-2.16.tar.bz2 3099896 RMD160 c2c1555fc08e4a355262310441e3884400e098b3 SHA1 cfe09fc5c5a4edb2c42e8db60eb9311518ed5733 SHA256 c07b8ed7ef1852b753f9a3803831036ea134fd7659c0f80e9d0db3c5215490bf
+EBUILD dejavu-2.15.ebuild 685 RMD160 2bbd8e4ec8e08d9e06fef6862f7984db27fb17d8 SHA1 435ef96ae64a68e07ae45275e407767e6a04a545 SHA256 d8abc525ddd49447cdd7e7b449c77fb708a53334f5209124afa8ecd513152454
+MD5 b4208d5bcca6a66bdd6d2f781262345c dejavu-2.15.ebuild 685
+RMD160 2bbd8e4ec8e08d9e06fef6862f7984db27fb17d8 dejavu-2.15.ebuild 685
+SHA256 d8abc525ddd49447cdd7e7b449c77fb708a53334f5209124afa8ecd513152454 dejavu-2.15.ebuild 685
+EBUILD dejavu-2.16.ebuild 695 RMD160 a7a91178afedf512217f14716f1e0164f61cbef3 SHA1 2781dba2accdb2899a7b97aae67df6d9970ac88f SHA256 afe343d7356e5acb90ffba6bf09c7316a02524101dcf7dadf4a2a76585fd504d
+MD5 fccc4dfd2a9da06c3b548d4cab6312c3 dejavu-2.16.ebuild 695
+RMD160 a7a91178afedf512217f14716f1e0164f61cbef3 dejavu-2.16.ebuild 695
+SHA256 afe343d7356e5acb90ffba6bf09c7316a02524101dcf7dadf4a2a76585fd504d dejavu-2.16.ebuild 695
+MISC ChangeLog 7633 RMD160 5c39f81aa8c62f80fd3592fe340621e21ef9dc7f SHA1 bbc1f7a2326f1ed15e1cd1760397943bdc8fc0ec SHA256 151cc37156220e720e7f9c0a1f9f143a239956ccd974331cddf2b20cdaf17bb5
+MD5 3f07dd9a6b2a78e09daae3e30c3078b8 ChangeLog 7633
+RMD160 5c39f81aa8c62f80fd3592fe340621e21ef9dc7f ChangeLog 7633
+SHA256 151cc37156220e720e7f9c0a1f9f143a239956ccd974331cddf2b20cdaf17bb5 ChangeLog 7633
+MISC metadata.xml 667 RMD160 ee11e9c2b012997895cf7a6317471ec6dfef477a SHA1 26a8e88cc43c539c3d098df093ae38eb6538a157 SHA256 5e827b10d0e12ca43ee49421a814f68b4e2b37ab329c2510046b6d0531ed429c
+MD5 826e1f50e41f006aaffd608427fc1644 metadata.xml 667
+RMD160 ee11e9c2b012997895cf7a6317471ec6dfef477a metadata.xml 667
+SHA256 5e827b10d0e12ca43ee49421a814f68b4e2b37ab329c2510046b6d0531ed429c metadata.xml 667
 MD5 c17026f257857fbf2bd31ecb1fbdd09b files/digest-dejavu-2.15 253
 RMD160 ae5b301226d2c635f0dbef5dab97af2eb438298e files/digest-dejavu-2.15 253
 SHA256 4aaf83a15e8a12c386f800eca75c22ace6241600a7b706dc50282dc0c93e4ba9 files/digest-dejavu-2.15 253
+MD5 c646d994713dca4051676837775c80d7 files/digest-dejavu-2.16 253
+RMD160 32cbe917255dfef15993a45d426a0c0921032e98 files/digest-dejavu-2.16 253
+SHA256 d960b7957987865a138626d7fb37068fd812147cc07bec78e28be29225f858de files/digest-dejavu-2.16 253
