@@ -1,0 +1,3 @@
+MD5 50cdf3a2a213121d29bf9639ab3aac80 dejavu-ttf-2.16.tar.bz2 3099896
+RMD160 c2c1555fc08e4a355262310441e3884400e098b3 dejavu-ttf-2.16.tar.bz2 3099896
+SHA256 c07b8ed7ef1852b753f9a3803831036ea134fd7659c0f80e9d0db3c5215490bf dejavu-ttf-2.16.tar.bz2 3099896
