@@ -1,6 +1,14 @@
 # ChangeLog for media-fonts/dejavu
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.57 2007/03/19 03:32:29 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/dejavu/ChangeLog,v 1.59 2007/04/16 22:01:54 kloeri Exp $
+
+  16 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> dejavu-2.15.ebuild:
+  Stable on Alpha, bug 174845.
+
+*dejavu-2.16 (16 Apr 2007)
+
+  16 Apr 2007; <pva@gentoo.org> metadata.xml, +dejavu-2.16.ebuild:
+  Version bump.
 
   19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
   Remove flameeyes from metadata.xml due to retirement.
